--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -453,11 +453,6 @@ jobs:
           name: It works 2!
           command: echo 'It works 2!'
 
-parameters:
-  run_workflow_e2e:
-    type: boolean
-    default: false
-
 workflows:
   test:
     jobs:
@@ -509,8 +504,14 @@ workflows:
 #            - publish
   deploy:
     jobs:
-      - install-e2e-deps
+      - frontpage
   e2e:
-    when: << pipeline.parameters.run_workflow_e2e >>
     jobs:
-      - e2e-v2
+      - hold:
+          type: approval
+      - e2e-v2:
+          requires:
+            - hold
+      - e2e-v2-job2:
+          requires:
+            - e2e-v2
