--- a/.github/workflows/trigger-e2e.yml
+++ b/.github/workflows/trigger-e2e.yml
@@ -10,12 +10,14 @@ jobs:
     name: Trigger E2E tests workflow on CircleCI
     runs-on: ubuntu-latest
     steps:
-    - name: Trigger E2E tests workflow on CircleCI
-      run: >
-        curl --request POST
-        --url https://circleci.com/api/v2/project/gh/storybookjs/storybook/pipeline
-        --header 'Circle-Token: '"$CIRCLE_CI_TOKEN"' '
-        --header 'content-type: application/json'
-        --data '{"branch":"${{ github.event.pull_request.head.ref }}", "parameters":{ "run_workflow_e2e":true }}'
-      env:
-        CIRCLE_CI_TOKEN: ${{ secrets.CIRCLE_CI_TOKEN_GMAISSE_TEST }}
+      - name: Echo
+        run: echo 'It works'
+#    - name: Trigger E2E tests workflow on CircleCI
+#      run: >
+#        curl --request POST
+#        --url https://circleci.com/api/v2/project/gh/storybookjs/storybook/pipeline
+#        --header 'Circle-Token: '"$CIRCLE_CI_TOKEN"' '
+#        --header 'content-type: application/json'
+#        --data '{"branch":"${{ github.event.pull_request.head.ref }}", "parameters":{ "run_workflow_e2e":true }}'
+#      env:
+#        CIRCLE_CI_TOKEN: ${{ secrets.CIRCLE_CI_TOKEN_GMAISSE_TEST }}
