--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -446,12 +446,26 @@ jobs:
       name: sb_node_10_classic
     working_directory: /tmp/storybook
     steps:
-      - checkout
-      - attach_workspace:
-          at: .
       - run:
-          name: It works 2!
-          command: echo 'It works 2!'
+          name: Get PR info
+          command: |
+            sudo apt-get install jq
+
+            PR_NUMBER=$(echo "$CIRCLE_PULL_REQUEST" | sed "s/.*\/pull\///")
+            echo "PR_NUMBER: $PR_NUMBER"
+            echo "export GITHUB_PR_NUMBER=$PR_NUMBER" >> $BASH_ENV
+
+            API_GITHUB="https://api.github.com/repos/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"
+            PR_REQUEST_URL="$API_GITHUB/pulls/$PR_NUMBER"
+            PR_RESPONSE=$(curl -H "Authorization: token $GITHUB_TOKEN_TEST_GMAISSE" "$PR_REQUEST_URL")
+
+            echo $PR_RESPONSE
+
+            if [ $(echo $pr_response | jq '.labels | map(select(.name == "run e2e tests")) | length') -eq 1 ]; then
+              echo "🚀 The PR is labelled with 'run e2e tests', the E2E test suite will be played!"
+            else
+              echo "🏁 The PR isn't labelled with 'run e2e tests' so the E2E test suite won't be played."
+            fi
 
 workflows:
   test:
@@ -507,7 +521,4 @@ workflows:
       - e2e-v2
   e2e:
     jobs:
-      - e2e-v2
-      - e2e-v2-job2:
-          requires:
-            - e2e-v2
+      - e2e-v2-job2
